@@ -100,6 +100,8 @@ Displayed on the home page.
 Displayed on the about page.
 .It login
 Displayed about the login form.
+.It avatar colors
+Four 32-bit hex colors (RGBA).
 .El
 .Pp
 .Ss User Admin
